update/add - adding htacces option to redirect ip to dns

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -12,7 +12,10 @@
     RewriteBase /
     RewriteCond %{HTTP_HOST} !^www\. [NC]
     RewriteCond %{HTTP_HOST} ^local.deis_form_tool [NC]
-    RewriteRule ^(.*)$ https:/www.%{HTTP_HOST}/$1 [R=301,L]
+    RewriteRule ^(.*)$ http://www.%{HTTP_HOST}/$1 [R=301,L]
+
+    #RewriteCond %{HTTP_HOST} ^172\.16\.1\.253$
+    #RewriteRule ^(.*)$ http://tv.minsal.cl/$1 [L,R=301]
 
     # Handle Front Controller...
     RewriteCond %{REQUEST_FILENAME} !-d
