--- a/package.json
+++ b/package.json
@@ -49,6 +49,9 @@
     "gulp-uglify": "^3.0.0",
     "highcharts": "^5.0.12",
     "laravel-elixir-vue-2": "^0.3.0",
+    "moment": "^2.19.4",
+    "moment-es6": "^1.0.0",
+    "momentjs": "^2.0.0",
     "npm": "^5.5.1",
     "rut.js": "^0.3.3",
     "select2": "^4.0.6-rc.1",
